objects/EMPAUALeadly__Lead_Mapping__c.object
<CustomObject>
    <label>Lead Mapping</label>
    <nameField>
        <displayFormat>LM-{0000}</displayFormat>
        <label>Lead Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EMPAUALeadly__Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Destination_Object__c</fullName>
        <label>Destination Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>